# bank_payment_parser

./: .gitignore  BULK_UPLOAD_GUIDE.md  FIX_DOCTYPE_VISIBILITY.md  FIX_INSTALLATION.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MANUAL_DOCTYPE_IMPORT.md  PaymentRemittanceRequest_36004123982024_307_CXML.xml  QUICK_START.md  README.md  SOLUTION.md  package.json  pyproject.toml  setup.py
bank_payment_parser/: hooks.py  modules.txt
bank_payment_parser/api/: bulk_upload.py  payment_entry.py  upload.py
bank_payment_parser/bank_payment_parser/: __init__.py
bank_payment_parser/bank_payment_parser/doctype/bank_payment_advice/: __init__.py  bank_payment_advice.js  bank_payment_advice.json  (+2 more)
bank_payment_parser/doctype/bank_payment_advice/: bank_payment_advice.json
bank_payment_parser/doctype/bank_payment_advice_invoice/: __init__.py  bank_payment_advice_invoice.json
bank_payment_parser/jobs/: __init__.py  bulk_processor.py
bank_payment_parser/public/: build.json
bank_payment_parser/public/css/: bank_payment_parser.css
bank_payment_parser/public/js/: bank_payment_advice.js  bank_payment_bulk_upload.js  bank_payment_parser.js
bank_payment_parser/services/: __init__.py  base_parser.py  generic_parser.py  hindustan_zinc.py  ocr_utils.py  parser_factory.py  payment_advice_creator.py
bank_payment_parser/services/pdf/: base_pdf_parser.py  generic_pdf.py  hindustan_zinc_pdf.py
bank_payment_parser/services/xml/: base_xml_parser.py  cxml_payment_remittance.py  cxml_payment_salary.py
bank_payment_parser/utils/: cleanup.py  validation.py
(+10 files in other folders)
